[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.58"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
parry2d = "0.9.0"
piet = "0.5.0"
piet-svg = "0.5.0"
piet-web = "0.5.0"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.31"
wee_alloc = "0.4.5"
ncollide2d = "0.33.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
embedded-graphics = "0.7.1"

[dependencies.web-sys]
version = "0.3.58"
features = ["console"]
