[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
#byteorder = "1.4.3"
#nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
#palette = "0.6.1"
#parry2d = "0.9.0"
#piet = "0.5.0"
#piet-svg = "0.5.0"
#piet-web = "0.5.0"
#serde_json = "1.0.82"
#wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
#wasm-bindgen-futures = "0.4.31"
console_error_panic_hook = "0.1.7"
embedded-graphics = "0.7.1"
js-sys = "0.3.58"
profont = "0.6.1"
serde = { version = "1.0.139", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.81"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.58"
features = ["console"]
